--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -72,4 +72,13 @@
         app:layout_constraintTop_toTopOf="parent"
         app:srcCompat="@mipmap/ic_launcher_round" />
 
+    <TextView
+        android:id="@+id/history"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Check History"
+        android:visibility="visible"
+        tools:layout_editor_absoluteX="149dp"
+        tools:layout_editor_absoluteY="450dp" />
+
 </android.support.constraint.ConstraintLayout>
